syntax = "proto3";

package pb;
option go_package = "im/api/pb";
import "common.proto";

service GateWay {
  //  发送消息
  rpc PushMsg (PushMsgReq) returns (PushMsgResp);
}

message PushMsgReq{
  repeated int64 pushToUserIdList = 1;
  Message message = 2;
}

message PushMsgResp{

}

message Input {
  PackageType type = 1; // 包的类型
  bytes data = 2; // 数据
}

message Output {
  PackageType type = 1; // 包的类型
  int64 code = 2; // 错误码
  string message = 3; // 错误信息
  bytes data = 4; // 数据
}